<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QuizResultActivity">

    <TextView
        android:id="@+id/quizNameTextView"
        style="@style/purpleTitleTextStyle"
        android:layout_marginTop="32dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/starImageView"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quizNameTextView"
        app:srcCompat="@drawable/star" />

    <TextView
        android:id="@+id/resultTextView"
        style="@style/BlueTextStyle"
        android:layout_marginTop="32dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/starImageView" />

    <TextView
        android:id="@+id/repeatTestTextView"
        style="@style/BlueTextStyle"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/retrySuggestion"
        app:layout_constraintBottom_toTopOf="@+id/retryTestButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/retryTestButton"
        style="@style/purpleButtonStyle"
        android:layout_width="0dp"
        android:layout_marginBottom="64dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="4dp"
        android:text="@string/retry"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/centerVerticalGuideline"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/backToQuizListButton"
        style="@style/purpleButtonStyle"
        android:layout_width="0dp"
        android:layout_marginBottom="64dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="16dp"
        android:text="@string/onMain"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/centerVerticalGuideline" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/centerVerticalGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>